Added docker files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "dev": "env-cmd -f ./src/dev.env ts-node ./src/app.ts"
+    "dev": "env-cmd -f ./src/dev.env ts-node ./src/app.ts",
+    "build": "tsc --project tsconfig.json",
+    "start": "node app.js",
+    "dev:docker": "ts-node ./src/app.ts"
   },
   "repository": {
     "type": "git",
