--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/node": "^20.3.3",
     "env-cmd": "^10.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
